# ai-agent

./: .dockerignore  .env.dist  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  justfile  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: deploy-develop-to-hf.yml  deploy-to-hf.yml  deploy_docs.yml  docker-build-pr.yml  publish_image_in_GHCR.yaml
api/: pipeline.py
data/: sample.jsonl
docs/: guide.md  index.md
docs/architecture/: agent.md  catalog.md  overview.md  retrieval.md
docs/development/: contributing.md  structure.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/reference/: changelog.md  cli.md  environment.md
docs/user-guide/: advanced-features.md  chat-interface.md  file-formats.md  recommendations.md  running-demos.md
executor/: space_runner.py
generator/: generator.py  prompts.py  schema.py
retriever/: embedders.py
scripts/: full_processing.py  process_fields.py
src/ai_agent/: cli.py
src/ai_agent/agent/: agent.py  models.py  tools.py  utils.py
src/ai_agent/api/: deps.py  pipeline.py  schemas.py  server.py
src/ai_agent/catalog/: sync.py
src/ai_agent/core/: __init__.py  app_setup.py  chat_state.py  formatters.py  handlers.py  model_config.py  pipeline_registry.py
src/ai_agent/generator/: generator.py  prompts.py  schema.py
src/ai_agent/queries/: get_relevant_software.rq
src/ai_agent/retriever/: embedders.py  (+7 more)
src/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tests/: README_RETRIEVAL_TESTS.md  README_test_deepwiki_repo_info.md  full_test.py  test_deepwiki_repo_info.py  test_embedder_remote.py  test_epfl_vision.py  test_gpt4o_vision.py  test_pipeline.py  test_pipeline_catalog_reader.py  test_pipeline_registry.py  test_previews_cache.py  test_query_utils.py  test_repo_summary.py  test_repo_summary_async_contract.py  test_reranker_remote.py  test_retrieval_pipeline.py
tests/data/: test_data.json
tools/: README.md
tools/image/: Dockerfile  hugging-face.Dockerfile
ui/: gradio_app.py
utils/: image_meta.py
(+85 files in other folders)
