[project]
name = "ai_agent"
version = "0.1.1"
description = "AI imaging agent with Gradio UI and RAG pipeline"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "faiss-cpu==1.11.0.post1",
  "numpy==2.2.6",
  "pydantic==2.11.7",
  "sentence-transformers==5.1.0",
  "openai==2.1.0",
  "pydantic-ai[mcp]==1.0.14",
  "requests==2.32.4",
  "python-dotenv==1.1.1",
  "gradio==5.42.0",
  "json5==0.12.0",
  "pillow==11.3.0",
  "nibabel==5.3.2",
  "tifffile==2025.5.10",
  "pydicom==3.0.1",
  "imageio==2.37.0",
  "rdflib==7.4.0",
  "sparqlwrapper==2.0.0",
  "plotly==6.5.0",
  "repocards==0.1.2",
  "pyyaml==6.0.2",
]

[project.scripts]
ai-agent = "ai_agent.cli:main"
ai_agent = "ai_agent.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ai_agent" = ["**/*.json", "**/*.yaml", "**/*.yml", "**/*.txt"]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black",
  "mypy",
  "types-requests",
]
